# staking-nft

./: Cargo.toml  package-lock.json  package.json
src/: common.rs  error.rs  instructions.rs  lib.rs  schemas.rs
src/instructions/: collection_data.rs  fund_withdrawal.rs  pool_deposit.rs  pool_initialization.rs  reward_withdrawal.rs  rewarder_addition.rs  token_data.rs
src/schemas/: instructions.rs  states.rs
src/schemas/instructions/: pool_deposit.rs  pool_initialization.rs  reward_addition.rs  reward_initialization.rs  reward_redemption.rs  token_data.rs
src/schemas/states/: collection_data.rs  payroll.rs  payroll_index.rs  payroll_token.rs  pool.rs  reward_token.rs  staking_account.rs  staking_payroll.rs  token_data.rs
