
[package]
name = "solana-sbf-staking-pool"
version = "0.0.1"
description = "Staking pool for NFT"
authors = ["hoa <hoa@codehub.io>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://codehub.io"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.14.5"
spl-token = "~3.5.0"
spl-associated-token-account = { version="~1.0.5", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="~1.6.2", features = [ "no-entrypoint" ] }
thiserror = "1.0.31"

[lib]
name = "staking_nft_4"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
